syntax = "proto3";

package auth;

option go_package = "frgaed.geo.v1";

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}

  message RegisterRequest {
    string first_name = 1;
    string last_name = 2;
    string username = 3;
    string email = 4;
    string password = 5;
    string uuid =6;
  }

  message RegisterResponse {
    int64 user_id = 1;
    string uuid =2;
  }

  message LoginRequest {
    string email = 1;
    string password = 2;
  }

  message LoginResponse {
    string token = 1;
  }

