syntax = "proto3";

package user;

option go_package = "frgaed.pay.v1";

service User {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Add (AddRequest) returns (AddResponse);
  rpc Login(LoginRequest) returns (LoginResponse);

}

  message GetRequest {
    int64 user_id = 1;
  }

  message GetResponse {
    int64 id = 1;
    string first_name =2;
    string last_name = 3;
    string user_name =4;
    string email = 5;
    string uuid =6;
  }



  message AddRequest{
    string first_name = 1;
    string last_name = 2;
    string username = 3;
    string email = 4;
    string password = 5;
    string uuid =6;

  }

  message AddResponse{
    int64 user_id = 1;
    string uuid =2;
  }

  message LoginRequest {
    string email = 1;
    string password =2;
  }

  message LoginResponse{
    string email = 1;
    string password =2;
    int64 id =3;
    string uuid =4;
  }

